# parenta-scraper

./: .gitignore  README.md  batch_extractor.py  pyproject.toml  requirements-dev.txt  requirements.txt  simple_scraper.py
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build-release.yml  test-build.yml
build-scripts/: build-all.py  build-linux.py  build-macos-intel.py  build-macos.py  build-windows.py  linux.spec  macos-intel.spec  macos.spec  windows.spec
