[project]
name = "parenta-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.31.0",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
]
